# ODataSchema2Cypher

./: README.md  pyproject.toml
ODataSchema2Cypher/: __init__.py
