[tool.poetry]
name = "odataschema2cypher"
version = "0.1.0"
description = ""
authors = ["Guy Korland <gkorland@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
falkordb = "^1.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
